--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @book.name %>
+  <strong>Index:</strong>
+  <%= @book.index %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
