--- a/app/views/gathas/_form.html.erb
+++ b/app/views/gathas/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :index %><br>
+    <%= f.text_field :index %>
   </div>
   <div class="field">
     <%= f.label :vagga_id %><br>
