--- a/app/views/gathas/show.html.erb
+++ b/app/views/gathas/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @gatha.name %>
+  <strong>Index:</strong>
+  <%= @gatha.index %>
 </p>
 
 <p>
