--- a/app/views/vaggas/show.html.erb
+++ b/app/views/vaggas/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @vagga.name %>
+  <strong>Index:</strong>
+  <%= @vagga.index %>
 </p>
 
 <p>
