--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -5,7 +5,7 @@ p id='notice' = notice
   ul.vaggas
     - @book.vaggas.each do |vagga|
       li 
-        = link_to vagga.index, vagga_path(vagga)
+        = link_to vagga.index, book_vagga_path(@book,vagga)
 
 /nav
 /  = link_to 'Edit', edit_book_path(@book)
