--- a/app/views/vaggas/show.html.slim
+++ b/app/views/vaggas/show.html.slim
@@ -6,7 +6,7 @@ p id='notice'
 
   .gathas
     - @vagga.gathas.each do |gatha|
-      p.gatha
+      .gatha
         .index = gatha.index
         .translations
           - gatha.translations.each do |translation|
