--- a/app/assets/stylesheets/vaggas.css.sass
+++ b/app/assets/stylesheets/vaggas.css.sass
@@ -1,18 +1,25 @@
-.vagga
-  display: inline-block
-  h1
+.Vagga
+  h2
     text-align: center
   .gatha .index
     text-align: center
   .translation
     text-align: center
 
+.Vagga .gatha .index
+  padding-left: 1em
+  font-weight: bold
+  font-size: 100%
+  color: gray
+
+
+/* END
+/*
+/*.Vagga
+  display: block
+  margin: 0 auto
 /*.vagga .gatha
   display: inline-block
   .index
     text-align: center
 
-.vagga .gatha .index
-  padding-left: 1em
-  font-weight: bold
-  font-size: 100%
