--- a/app/views/gathas/show.html.slim
+++ b/app/views/gathas/show.html.slim
@@ -3,12 +3,12 @@ p id='notice'
 
 p
   strong
-    Index: 
+    'Index: 
   = @gatha.index
 
 p
   strong
-    Vagga: 
+    'Vagga: 
   = @gatha.vagga_id
 
 /<%= link_to 'Edit', edit_gatha_path(@gatha) %> |
