--- a/app/assets/stylesheets/vaggas.css.sass
+++ b/app/assets/stylesheets/vaggas.css.sass
@@ -1,3 +1,5 @@
+$link_color: gray
+
 .Vagga
   h2
     text-align: center
@@ -10,7 +12,10 @@
   padding-left: 1em
   font-weight: bold
   font-size: 100%
-  color: gray
+  a
+    text-decoration: none
+    /*border-bottom: dashed 1px
+    border-bottom: dotted 1px $link_color
 
 
 /* END
