--- a/app/assets/stylesheets/gathas.css.sass
+++ b/app/assets/stylesheets/gathas.css.sass
@@ -1,2 +1,8 @@
-.gatha .translation
-  white-space: pre-line
+.gatha
+  .translation
+    white-space: pre-line
+    text-align: center
+
+.Gatha .vagga
+  h2, h3
+    text-align: center
