more consistant view

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -11,5 +11,6 @@ a
     color: $link_color
     background: lightgray
 
-/*html
-  background-color: gray
+html
+  overflow-y: scroll
+  /*background-color: gray
