--- a/app/assets/stylesheets/vaggas.css.sass
+++ b/app/assets/stylesheets/vaggas.css.sass
@@ -9,9 +9,9 @@ $link_color: gray
     text-align: center
 
 .Vagga .gatha .index
-  padding-left: 1em
-  font-weight: bold
-  font-size: 100%
+  /*padding-left: 1em
+  /*font-weight: bold
+  /*font-size: 100%
   a
     text-decoration: none
     border-bottom: dotted 1px $link_color
