--- a/app/views/vaggas/show.html.slim
+++ b/app/views/vaggas/show.html.slim
@@ -17,13 +17,14 @@ p id='notice'
         a href = request.original_url = @vagga.index
     
       .gathas
+        / actually I should select those preferred by user
         - @vagga.gathas.each do |gatha|
           .gatha
             h3.index
               = link_to gatha.index, \
               book_vagga_gatha_path(book,@vagga,gatha)
             .translations
-              - gatha.translations.each do |translation|
+              - gatha.translations.select { |x| x.source.lang == 'pi' }.each do |translation|
                 p.translation
                   = translation.text
 
