--- a/app/assets/stylesheets/gathas.css.sass
+++ b/app/assets/stylesheets/gathas.css.sass
@@ -34,3 +34,35 @@ $nav-padding: 1em
     img.illustration
       z-index: -1
       position: relative
+
+  $button-size: 30px
+  /*.text
+    display: inline
+  .button
+    cursor: default
+    -webkit-touch-callout: none
+    -webkit-user-select: none
+    -khtml-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
+    box-sizing: border-box
+    -moz-box-sizing: border-box
+    &:hover
+      border-width: 2px
+      border-color: green
+    &:active
+      background-color: lightgray
+    border-radius: 10px
+    font-size: 150%
+    color: green
+    /*float: right
+    position: absolute
+    /*visibility: hidden
+    /*display: none
+    /*block
+    border: solid 1px gray
+    width: $button-size
+    height: $button-size
+    line-height: $button-size
+    text-align: center
