--- a/app/assets/stylesheets/gathas.css.sass
+++ b/app/assets/stylesheets/gathas.css.sass
@@ -66,3 +66,6 @@ $nav-padding: 1em
     height: $button-size
     line-height: $button-size
     text-align: center
+  .hili
+    text-decoration: underline
+    /*font-weight: bold
