max-width of translation text

--- a/app/assets/stylesheets/gathas.css.sass
+++ b/app/assets/stylesheets/gathas.css.sass
@@ -4,6 +4,9 @@ $nav-padding: 1em
   .translation
     white-space: pre-line
     text-align: center
+    .text
+      display: inline-block
+      max-width: 450px
 
 .Gatha .vagga
   h2, h3
