--- a/app/views/gathas/show.html.slim
+++ b/app/views/gathas/show.html.slim
@@ -34,7 +34,7 @@ p id='notice'
             img.illustration src = '/img/dhammapada/gatha_#{@gatha.index}.jpg'
 
         hr
-          img src = '/img/underconstruction.gif' style='margin: auto; display: block'
+          img src = '/img/wip.gif' style='margin: auto; display: block'
 
 
 
