--- a/app/assets/stylesheets/gathas.css.sass
+++ b/app/assets/stylesheets/gathas.css.sass
@@ -1,5 +1,10 @@
 $nav-padding: 1em
 
+.heh
+  text-align: center
+  list-style: none
+  padding-left: 0
+
 .gatha
   .translation
     white-space: pre-line
@@ -9,6 +14,7 @@ $nav-padding: 1em
       max-width: 450px
 
 .Gatha .vagga
+
   h2, h3
     text-align: center
 
