--- a/app/views/gathas/show.html.slim
+++ b/app/views/gathas/show.html.slim
@@ -33,18 +33,26 @@ p id='notice'
           .shadow
             img.illustration src = '/img/dhammapada/gatha_#{@gatha.index}.jpg'
 
-        - @gatha.translations.each do |translation|
-          - next if translation.excerpts.none?
+        - tr = @gatha.translations.select { |x| x.excerpts.any? }
+        - texts = tr.map &:text
+        - colors = prepare_colors tr
+        - texts.zip(colors).each do |text, colors|
           p.translation
             span.text
-              == colored_text translation
+              == colored text, colors
+
+        /- @gatha.translations.each do |translation|
+        /  - next if translation.excerpts.none?
+        /  p.translation
+        /    span.text
+        /      == colored_text translation
           
         - if @excerpts.any?
           hr
             ul.heh
               - @excerpts.to_a.each do |x|
                 li
-                  .text = x.text + ' -- ' + x.linked.map(&:text).join(', ')
+                  .text = x.text + ' -- ' + x.linkzed.map(&:text).join(', ')
                   .also
                     - gathas = x.phrase.where_used
                     - links = gathas.map { |gatha| link_to gatha.index, book_vagga_gatha_path(gatha.book, gatha.vagga, gatha) }
