unused stuff concerning js-dictionary...

--- a/app/views/gathas/show.html.slim
+++ b/app/views/gathas/show.html.slim
@@ -46,7 +46,8 @@ p id='notice'
         /  p.translation
         /    span.text
         /      == colored_text translation
-          
+        .dict
+
         - if @excerpts.any?
           hr
             ul.heh
