lines between translation variants

--- a/app/assets/stylesheets/gathas.css.sass
+++ b/app/assets/stylesheets/gathas.css.sass
@@ -6,6 +6,24 @@ $nav-padding: 1em
   padding-left: 0
 
 .gatha
+  .translation+.line
+    margin: 1em
+    padding: 0
+    text-align: center
+    /*1.5ex
+    .mark
+      margin: 0
+      padding: 0
+      display: inline-block
+      vertical-align: middle
+      width: 100px
+      height: 2px
+      background: linear-gradient(to right, lightgray, gray, lightgray)
+
+  /*.translation+.translation:before
+    content: ' '
+    display: block
+    padding: 0
   .translation
     white-space: pre-line
     text-align: center
