--- a/app/views/gathas/show.html.slim
+++ b/app/views/gathas/show.html.slim
@@ -26,17 +26,19 @@ p id='notice'
 
 
         - @gatha.translations.each do |translation|
-          p
-            .translation x-id=translation.id
-              /span
-              .text
-                = translation.text
-                - # dirty
-                - if translation.translateable.translations.first == translation
-                  .play-button
-                    a
-                      audio controls=false preload='none' src="/audio/gathas/#{@gatha.index}.ogg" type='audio/ogg'
-                      img src='/img/ui/play.png'
+          /p.translation-fixme
+          .line
+            .mark
+          .translation x-id=translation.id
+            /span
+            .text
+              = translation.text
+              - # dirty
+              - if translation.translateable.translations.first == translation
+                .play-button
+                  a
+                    audio controls=false preload='none' src="/audio/gathas/#{@gatha.index}.ogg" type='audio/ogg'
+                    img src='/img/ui/play.png'
         .center
           .shadow
             img.illustration src = '/img/dhammapada/gatha_#{@gatha.index}.jpg'
