--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -3,7 +3,7 @@ $link_color: black
 a
   color: $link_color
   text-decoration: none
-  border-bottom: dotted 1px
+  /*border-bottom: dotted 1px
   /*$link_color
   &:visited
     color: $link_color
