--- a/app/views/gathas/show.html.slim
+++ b/app/views/gathas/show.html.slim
@@ -36,9 +36,9 @@ p id='notice'
               - # dirty
               - if translation.translateable.translations.first == translation
                 .play-button
-                  a
-                    audio controls=false preload='none' src="/audio/gathas/#{@gatha.index}.ogg" type='audio/ogg'
-                    img src='/img/ui/play.png'
+                  /a
+                  audio controls=false preload='none' src="/audio/gathas/#{@gatha.index}.ogg" type='audio/ogg'
+                  img src='/img/ui/play.png' alt='play/listen'
         .center
           .shadow
             img.illustration src = '/img/dhammapada/gatha_#{@gatha.index}.jpg'
